Update frontend for GitHub Pages deployment

--- a/TykhePot/frontend/package.json
+++ b/TykhePot/frontend/package.json
@@ -55,5 +55,5 @@
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.3.6"
   },
-  "homepage": "https://tykhepot.com"
+  "homepage": "https://tykhepot.github.io/TykhePot"
 }
