--- a/TykhePot/frontend/package.json
+++ b/TykhePot/frontend/package.json
@@ -6,10 +6,11 @@
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
     "@solana/spl-token": "^0.3.9",
-    "@solana/wallet-adapter-base": "^0.9.23",
-    "@solana/wallet-adapter-react": "^0.15.32",
-    "@solana/wallet-adapter-react-ui": "^0.9.31",
-    "@solana/wallet-adapter-wallets": "^0.19.16",
+    "@solana/wallet-adapter-base": "^0.9.28",
+    "@solana/wallet-adapter-phantom": "^0.9.28",
+    "@solana/wallet-adapter-react": "^0.15.39",
+    "@solana/wallet-adapter-react-ui": "^0.9.39",
+    "@solana/wallet-adapter-wallets": "^0.19.37",
     "@solana/web3.js": "^1.87.0",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
@@ -55,5 +56,5 @@
     "react-app-rewired": "^2.2.1",
     "tailwindcss": "^3.3.6"
   },
-  "homepage": "https://tykhepot.com"
+  "homepage": "/"
 }
