--- a/TykhePot/frontend/package.json
+++ b/TykhePot/frontend/package.json
@@ -5,13 +5,17 @@
   "private": true,
   "dependencies": {
     "@coral-xyz/anchor": "^0.29.0",
-    "@solana/spl-token": "^0.3.9",
+    "@metaplex-foundation/js": "^0.20.1",
+    "@metaplex-foundation/umi": "^1.5.1",
+    "@solana/spl-token": "^0.3.11",
+    "@solana/spl-token-metadata": "^0.1.6",
     "@solana/wallet-adapter-base": "^0.9.27",
     "@solana/wallet-adapter-phantom": "^0.9.27",
     "@solana/wallet-adapter-react": "^0.15.35",
     "@solana/wallet-adapter-react-ui": "^0.9.35",
+    "@solana/wallet-adapter-walletconnect": "^0.1.21",
     "@solana/wallet-adapter-wallets": "^0.19.37",
-    "@solana/web3.js": "^1.87.0",
+    "@solana/web3.js": "^1.98.4",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.1",
     "events": "^3.3.0",
