--- a/TykhePot/frontend/vercel.json
+++ b/TykhePot/frontend/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "public": true,
   "github": {
-    "enabled": false
+    "enabled": true
   },
   "rewrites": [
     { "source": "/(.*)", "destination": "/index.html" }
